--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "jwt-simple": "^0.5.6",
     "mjml": "^4.9.3",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.8",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.12.8"
   },
   "devDependencies": {
+    "nodemon": "^2.0.7",    
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1"
